--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <p><iframe width="560" height="315" src="https://www.youtube.com/embed/F0IbjVq-fgs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><strong>쉬어가기->음악듣기</strong>
 
-    <p>사라야 이거 내가 만들었어!! 신기하지?!!</P>
+    <p><h1>사라야 이거 내가 만들었어!! 신기하지?!!</h1></P>
     </p>
     <ol>
         <h2><li><a href="1.html">html </a></li></h2>
